--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="تطبيقات مقرصنة, تحميل آمن, حماية الهاتف, أمان رقمي, Get_Apkmod">
     <meta name="author" content="فريق الأمن الرقمي"><!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
+
+<meta name="google-site-verification" content="pbaYo_DwT18JyfLNkkeFPabkAiy8fKxHNmxBBtv1jeE" />
+
 <meta property="og:title" content="خطورة التطبيقات المقرصنة | Get_Apkmod للتحميل الآمن">
 <meta property="og:description" content="تعرف على مخاطر التطبيقات المقرصنة وكيفية تحميل التطبيقات بشكل آمن عبر قناتنا الرسمية">
 <meta property="og:image" content="https://i.postimg.cc/B6sVJQsg/Screenshot-2025-03-28-20-22-37-70-b5a5c5cb02ca09c784c5d88160e2ec24.jpg">
